<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_main_image"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        />

    <TextView
        android:id="@+id/tv_city_name"
        android:layout_width="203dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:hint="@string/city_name"
        />

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="118dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/temperature"
        />

    <TextView
        android:id="@+id/tv_description_weather"
        android:layout_width="121dp"
        android:layout_height="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:hint="@string/description_weather"
        />

    <TextView
        android:id="@+id/tv_wind_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:hint="@string/wind"
        />

    <TextView
        android:id="@+id/tv_humidity_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/humidity"
        />

    <TextView
        android:id="@+id/tv_pressure_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/pressure"
        />

    <TextView
        android:id="@+id/tv_tempmin_txvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/temp_min"
        />

    <TextView
        android:id="@+id/tv_sunrise_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/sunrise"
        />

    <TextView
        android:id="@+id/tv_sunset_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/sunset"
        />

    <TextView
        android:id="@+id/tv_wind_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/wind_value"
        />

    <TextView
        android:id="@+id/tv_humidity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/humidity_value"
        />

    <TextView
        android:id="@+id/tv_pressure_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pressure_value"
        />

    <TextView
        android:id="@+id/tv_tempmax_txvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tempmax"
        />

    <TextView
        android:id="@+id/tv_sunrise_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sunrise_value"
        />

    <TextView
        android:id="@+id/tv_sunset_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sunset_value"
        />

</RelativeLayout>